--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,14 +15,11 @@ jobs:
     runs-on: ubuntu-22.04	#this is not the same as ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-      
+        uses: actions/checkout@v4
       - name: Install rust stable toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@v1
         with:
-          toolchain: stable
           profile: minimal
-          override: true
 
       - name: Cache dependencies
         uses: actions/cache@v3
