feat(appdata): Improve appdata for AppStream 1.0
- Add the `<developer><name>` tag
- Mark the `<developer_name>` tag as deprecated
- Improve appstreamcli arguments

--- a/data/meson.build
+++ b/data/meson.build
@@ -47,7 +47,7 @@ if appstreamcli.found()
   test(
     'validate-appdata', appstreamcli,
     args: [
-      'validate', '--no-net', appdata_file.full_path()
+      'validate', '--no-net', '--explain', appdata_file.full_path()
     ],
     depends: appdata_file,
   )
