--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -6,7 +6,11 @@
   <project_license>GPL-3.0</project_license>
   <name>Eyedropper</name>
   <summary>Pick and format colors</summary>
+  <!-- developer_name tag deprecated with Appstream 1.0 -->
   <developer_name translatable="no">FineFindus</developer_name>
+  <developer id="github.com">
+      <name translatable="no">FineFindus</name>
+  </developer>
   <update_contact>finefindus@proton.me</update_contact>
   <project_group>GNOME</project_group>
   <description>
