--- a/data/com.github.finefindus.eyedropper.desktop.in.in
+++ b/data/com.github.finefindus.eyedropper.desktop.in.in
@@ -7,7 +7,7 @@ Exec=eyedropper
 Terminal=false
 Categories=GNOME;GTK;Development;Graphics;Utility;WebDevelopment;
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
-Keywords=Gnome;GTK;Color;Color Picker;Picker;Palette;
+Keywords=Gnome;GTK;Color;Colorpicker;Picker;Palette;
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 Icon=@icon@
 StartupNotify=true
