--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -8,7 +8,7 @@
   <summary>Pick and format colors</summary>
   <!-- developer_name tag deprecated with Appstream 1.0 -->
   <developer_name translatable="no">FineFindus</developer_name>
-  <developer id="github.com">
+  <developer id="io.github.finefindus">
       <name translatable="no">FineFindus</name>
   </developer>
   <update_contact>finefindus@proton.me</update_contact>
