--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,4 @@ bytes = "1.4"
 search-provider = { version = "0.6.0", features = ["gdk-pixbuf"] }
 nom = "7.1"
 phf = { version = "0.11.2", features = ["macros"] }
+zbus = "3.15.2"
