feat: remove palette dialog

--- a/data/resources/meson.build
+++ b/data/resources/meson.build
@@ -1,19 +1,24 @@
 # Compile blueprints
-blueprints = custom_target('blueprints',
+blueprints = custom_target(
+  'blueprints',
   input: files(
-    'ui/shortcuts.blp',
-    'ui/preferences/custom-format-row.blp',
-    'ui/preferences/preferences.blp',
-    'ui/preferences/name-sources-dialog.blp',
     'ui/color-format-row.blp',
-    'ui/palette-window.blp',
     'ui/history-item.blp',
+    'ui/preferences/custom-format-row.blp',
+    'ui/preferences/name-sources-dialog.blp',
+    'ui/preferences/preferences.blp',
+    'ui/shortcuts.blp',
     'ui/window.blp',
   ),
   output: '.',
-  command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
+  command: [
+    find_program('blueprint-compiler'),
+    'batch-compile',
+    '@OUTPUT@',
+    '@CURRENT_SOURCE_DIR@',
+    '@INPUT@',
+  ],
 )
-
 
 # Resources
 resources = gnome.compile_resources(
