--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 description = "Pick and format colors"
 readme = "README.md"
 license-file = "LICENSE"
-homepage = "https://github.com/finefindus/eyedropper"
+homepage = "https://apps.gnome.org/Eyedropper/"
 repository = "https://github.com/finefindus/eyedropper"
 rust-version = "1.70"
 
