--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install Python Dependencies
         run: pip install codespell
       - name: Run spellchecker
-        run: codespell  -S po,_build,.git,.flatpak,_builddir,build,target -L crate,rouge,vermillion
+        run: codespell  -S po,_build,.git,.flatpak,_builddir,build,target -L crate,rouge,vermillion,trough
 
 
   update_translations:
