--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -30,19 +30,19 @@
   </description>
   <screenshots>
     <screenshot type="default">
-      <image>https://raw.githubusercontent.com/FineFindus/eyedropper/master/data/resources/screenshots/main_default_light.png</image>
+      <image>https://raw.githubusercontent.com/FineFindus/eyedropper/master/data/resources/screenshots/main_default.png</image>
       <caption>Main window with a color in different formats</caption>
     </screenshot>
     <screenshot>
-      <image>https://raw.githubusercontent.com/FineFindus/eyedropper/master/data/resources/screenshots/main_customize_light.png</image>
+      <image>https://raw.githubusercontent.com/FineFindus/eyedropper/master/data/resources/screenshots/main_customize.png</image>
       <caption>Main window with customized formats</caption>
     </screenshot>
     <screenshot>
-      <image>https://raw.githubusercontent.com/FineFindus/eyedropper/master/data/resources/screenshots/palette_dialog_new_export_light.png</image>
-      <caption>Dialog showing generated color palettes</caption>
+      <image>https://raw.githubusercontent.com/FineFindus/eyedropper/master/data/resources/screenshots/edit_sheet.png</image>
+      <caption>Editor with an HSL editor</caption>
     </screenshot>
     <screenshot>
-      <image>https://raw.githubusercontent.com/FineFindus/eyedropper/master/data/resources/screenshots/status_light.png</image>
+      <image>https://raw.githubusercontent.com/FineFindus/eyedropper/master/data/resources/screenshots/status.png</image>
       <caption>Status page stating to pick a color to get started</caption>
     </screenshot>
   </screenshots>
