--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -54,6 +54,20 @@
   <url type="translate">https://github.com/FineFindus/eyedropper#translation</url>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="2.0.0" date="2024-09-18">
+      <description translatable="no">
+        <p>A new release, including major reworks the the UI and the color system</p>
+        <ul>
+          <li>Added a new color editor, allowing to modify colors</li>
+          <li>Reworked the system handling color conversions</li>
+          <li>Updated to modern GNOME styling</li>
+          <li>A warning page is now shown on unsupported systems</li>
+          <li>Various internal code improvements and bug fixes</li>
+          <li>Removed the palette dialog</li>
+          <li>Removed custom color formats</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.0.0" date="2023-09-27">
       <description translatable="no">
         <p>A new release with exciting new features and many improvements.</p>\n<ul><li>Allow entering any format</li><li>Display color in overview search</li><li>Export palettes to LibreOffice</li><li>A visual differentiation between color and background</li><li>Improved color conversion</li><li>Visual refinements to match the state of the art of GNOME apps</li><li>Internal code improvements and bug fixes</li></ul>
