--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ once_cell = "1.18.0"
 gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
 glib = "0.20"
 adw = { package = "libadwaita", version = "0.7", features = ["v1_6"] }
-ashpd = { version = "0.10", features = ["gtk4"] }
+ashpd = { version = "0.10", default-features = false, features = ["async-std", "gtk4"] }
 rand = "0.8"
 bytes = "1.4"
 search-provider = { version = "0.10", features = ["gdk-pixbuf"] }
