feat: add color entry to placeholder page
Adds an entry to the placeholder page, allowing the user to manually
enter a color format, without having to pick a color first. To avoid
crowding the page, the color picker button is moved to the headerbar.

Closes https://github.com/FineFindus/eyedropper/issues/167

--- a/data/resources/meson.build
+++ b/data/resources/meson.build
@@ -4,6 +4,7 @@ blueprints = custom_target(
   input: files(
     'ui/color-format-row.blp',
     'ui/history-item.blp',
+    'ui/placeholder-page.blp',
     'ui/preferences.blp',
     'ui/shortcuts.blp',
     'ui/window.blp',
