--- a/data/com.github.finefindus.eyedropper.gschema.xml.in
+++ b/data/com.github.finefindus.eyedropper.gschema.xml.in
@@ -20,6 +20,11 @@
       <summary>Alpha Position</summary>
       <description>At which position the alpha values are shown, e.g. not shown, the end or at the start. This preference is used in multiple formats, like hex, rgb and hsl.</description>
     </key>
+    <key name="rgb-notation" type="i">
+      <default>0</default>
+      <summary>RGB Notation</summary>
+      <description>Whether RGB values should be displayed as integers or decimals</description>
+    </key>
     <key name="cie-illuminants" type="i">
       <default>5</default>
       <summary>Color Illuminant</summary>
