chore: rename default branch to main

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,7 +4,7 @@ name: Release
 on:
   #switch for debugging
   # push:
-  #   branches: [master]
+  #   branches: [main]
   release:
     types: [published]
 
