refactor: using a more appropriate text in the context of information location

--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -49,7 +49,7 @@
   <releases>
     <release version="2.1.0" date="2025-03-23">
       <description translatable="no">
-        <p>In this version:</p>
+        <p>New feature, fixed bug and update in GNOME styling:</p>
         <ul>
           <li>RGB can now be displayed in decimal notation</li>
           <li>Colors can now be directly entered, without picking a color first</li>
