build: use blueprint compiler provided by the SDK

--- a/data/resources/meson.build
+++ b/data/resources/meson.build
@@ -11,7 +11,7 @@ blueprints = custom_target(
   ),
   output: '.',
   command: [
-    find_program('blueprint-compiler'),
+    blueprint_compiler,
     'batch-compile',
     '@OUTPUT@',
     '@CURRENT_SOURCE_DIR@',
