Add D-Bus service file
And mark the application as D-Bus activatable. This allows application
launchers to activate it via D-Bus.

--- a/data/com.github.finefindus.eyedropper.desktop.in.in
+++ b/data/com.github.finefindus.eyedropper.desktop.in.in
@@ -11,3 +11,4 @@ Keywords=Gnome;GTK;Color;Colorpicker;Picker;Palette;
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 Icon=@icon@
 StartupNotify=true
+DBusActivatable=true
