--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,11 +26,14 @@ phf = { version = "0.13", default-features = false }
 phf_codegen = "0.13"
 
 [dependencies]
-log = "0.4"
-pretty_env_logger = "0.5"
+tracing-subscriber = "0.3"
+tracing = "0.1"
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 once_cell = "1.18.0"
-gtk = { version = "0.11.0-alpha.2", package = "gtk4", features = ["v4_22", "gnome_49"] }
+gtk = { version = "0.11.0-alpha.2", package = "gtk4", features = [
+    "v4_22",
+    "gnome_49",
+] }
 adw = { package = "libadwaita", version = "0.9.0-alpha.0", features = ["v1_9"] }
 ashpd = { version = "0.13.0-alpha", default-features = false, features = [
     "async-io",
